# socmint-sdn-plugin

./: README.md  plugin-manifest.json
src/cpp/: CMakeLists.txt
src/cpp/include/socmint/: types.h
src/cpp/src/: socmint.cpp
src/cpp/tests/: test_sixdof.cpp  test_socmint.cpp
