cmake_minimum_required(VERSION 3.14)
project(socmint_sdn_plugin CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_executable(test_socmint tests/test_socmint.cpp)
target_include_directories(test_socmint PRIVATE include)
add_executable(test_sixdof tests/test_sixdof.cpp)
target_include_directories(test_sixdof PRIVATE include)
enable_testing()
add_test(NAME socmint COMMAND test_socmint)
add_test(NAME socmint_sixdof COMMAND test_sixdof)
